crates/vise/tests/ui/labels/bogus_label_name_in_metrics_attr.rs
use vise::{Counter, LabeledFamily, Metrics};

#[derive(Debug, Metrics)]
struct TestMetrics {
    #[metrics(labels = ["methoD"])]
    histograms: LabeledFamily<&'static str, Counter>,
}

fn main() {}
